# Contextify

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Process Logic.md  QUICKSTART.md  README.md  pyproject.toml  test.py  test_all_handlers.py
.github/workflows/: publish.yml
contextifier/: __init__.py
contextifier/chunking/: __init__.py  chunking.py  constants.py  page_chunker.py  protected_regions.py  sheet_processor.py  table_chunker.py  table_parser.py  text_chunker.py
contextifier/core/: __init__.py  document_processor.py
contextifier/core/functions/: __init__.py  encoding.py  file_converter.py  img_processor.py  metadata_extractor.py  utils.py  (+6 more)
contextifier/ocr/: __init__.py  base.py  ocr_processor.py
contextifier_new/: __init__.py  config.py  document_processor.py  errors.py  types.py
contextifier_new/chunking/: __init__.py  chunker.py  constants.py
contextifier_new/handlers/: __init__.py  base.py  registry.py
contextifier_new/ocr/: __init__.py  base.py  processor.py
contextifier_new/pipeline/: __init__.py  content_extractor.py  converter.py  metadata_extractor.py  postprocessor.py  preprocessor.py
contextifier_new/services/: __init__.py  chart_service.py  image_service.py  metadata_service.py  table_service.py  tag_service.py
libs/: __init__.py
libs/chunking/: __init__.py  chunking.py  page_chunker.py  protected_regions.py  sheet_processor.py  table_chunker.py  table_parser.py  text_chunker.py
libs/core/: __init__.py  document_processor.py
libs/ocr/: __init__.py  base.py  ocr_processor.py
test/: 이미용 부속서_00.docx  인사기록카드_PLATEER_성명_2025.xlsx
(+270 files in other folders)
