[project]
name = "Contextify"
version = "1.0.0"
description = "Contextify is a document processing library that converts raw documents into AI-understandable context. It analyzes, restructures, and normalizes content so that language models can reason over documents with higher accuracy and consistency."
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "orjson==3.11.5",
    "psutil==7.0.0",
    "pandas==2.3.3",
    "langchain==1.2.3",
    "langchain-community==0.4.1",
    "langchain-core==1.2.6",
    "langchain-openai==1.1.7",
    "langchain-anthropic==1.3.1",
    "langchain-google-genai==4.1.3",
    "langchain-text-splitters==1.1.0",
    "langgraph==1.0.5",
    "langsmith==0.6.2",
    "beautifulsoup4==4.14.3",
    "docx2pdf==0.1.8",
    "python-docx==1.2.0",
    "python-pptx==1.0.2",
    "pymupdf==1.26.5",
    "pdfplumber==0.11.5",
    "openpyxl==3.1.5",
    "xlrd==2.0.2",
    "olefile==0.47",
    "pyhwp==0.1b15",
    "chardet==5.2.0",
    "pi-heif==1.1.1",
    "pdfminer-six==20231228",
    "pdf2image==1.17.0",
    "pytesseract==0.3.13",
    "striprtf==0.0.29",
    "matplotlib==3.10.8",
    "cachetools==6.2.4",
    "aiofiles==24.1.0",
]
